--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,7 +4,20 @@ body {
 
 .container {
   display: flex;
-  align-self: center;
+  align-items: center;
   justify-content: center;
   flex-direction: column;
+}
+.image {
+  width: 370px;
+  margin-top: 50px;
+}
+@media only screen and (max-width: 770px) {
+  .container {
+    margin: 0 10%;
+  }
+
+  .image {
+    width: 100%;
+  }
 }
